src/app/header/header.component.scss
@use 'variables' as v;
@use 'functions' as f;

:host {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: f.get-z-index(header);
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: v.$accent-300;
  padding: 1rem;
  height: v.$header-height;
  min-height: v.$header-height;

  .brand-wrapper {
    display: flex;
    align-items: center;

    .button {
      margin-right: 1rem;
    }

    .brand {
      text-decoration: none;
      color: v.$primary-600;
      font-size: 1.25rem;
    }
  }

  .triangle {
    font-size: 8px;
    line-height: 8px;
    transform: rotate(180deg);
  }
}

